<resources>
    <string name="app_name">WeatherApp</string>
    <string name="select_msg">Please select city from below list :</string>
    <string name="city">City</string>
    <string name="update_time">Updated time</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="loading">Fetching Data Please wait..</string>
    <string-array
        name="city_list">
        <item>Sydney</item>
        <item>Melbourne</item>]
        <item>Wollongong</item>
    </string-array>
</resources>
