<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="code4share.weatherapp.view.activity.HomeActivity">

    <data>

        <variable
            name="homeViewModel"
            type="code4share.weatherapp.viewModel.HomeViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/activity_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView

            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_msg"
            />

        <Spinner
            android:id="@+id/sprCityList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="4dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lblTxtCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/city"/>

                    <TextView
                        android:id="@+id/txtCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        tools:text="@string/city"
                        android:gravity="center"
                        android:text="@{homeViewModel.cityName}"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lblTxtTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/update_time"/>

                    <TextView
                        android:id="@+id/txtUTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@{homeViewModel.updateTime}"
                        tools:text="@string/city"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lblWeather"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/weather"/>

                    <TextView
                        android:id="@+id/txtWeather"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@{homeViewModel.weather}"
                        tools:text="@string/city"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lbltxtTemp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/temperature"/>

                    <TextView
                        android:id="@+id/txtTemperature"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@{homeViewModel.temperature}"
                        tools:text="@string/city"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lbltxtWind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/wind"/>

                    <TextView
                        android:id="@+id/txtWind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@{homeViewModel.wind}"
                        tools:text="@string/city"/>
                </TableRow>

            </TableLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</layout>